# AI-Powered-Document-Intelligence-Hub

./: .env  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
app/: main.py
app/api/: routes.py
app/api/utility/: auth.py  format.py  ocr.py  rag.py  search.py  summarize.py  upload.py  user_docs.py
app/common_utils/: file_handler.py  formatter.py  text_splitters.py
app/core/: config.py  security.py
app/models/: documents.py  users.py
app/schemas/: formate_schema.py  summarize_schema.py
app/services/: ocr_service.py  rag_service.py  retriever_service.py  summarization.py  transcription_service.py  vector_service.py
data/chroma_db/: chroma.sqlite3
frontend/: app.py
frontend/utils/: api.py
